<resources>
    <string name="app_name">FriendFin</string>
    <string name="todo">Todo</string>
    <string name="get_started">Get Started</string>
    <string name="introtext1">Find Your Special Someone</string>
    <string name="introdesc1">with our new exciting feature and opportunity. Everyone and Everywhere</string>
    <string name="introtext2">More Profiles More Dates</string>
    <string name="introdesc2">help you find your perfect partner based on your requirement.</string>
    <string name="introtext3">Interact Around The World</string>
    <string name="introdesc3">Events in the app. You can connect them directly.</string>
    <string name="tagLine">Find Partner With FriendFin</string>
    <string name="tagLine2">Find Partner With VIP FriendFin</string>
    <string name="register">Register</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="friendfin">FriendFin</string>
    <string name="Login">Login</string>
    <string name="access_your_account_for_getting_your_trainee">Access your account for perfect partner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="donthave">don\'t have an account?</string>
    <string name="signUpbusiness">Sign Up here</string>
    <string name="allrightreserve">\@All Rights reserved - FriendFin</string>
    <string name="userName">User Name</string>
    <string name="name">Enter Full Name</string>
    <string name="zip">Zip/Postal Code</string>
    <string name="checkbox_text">I agree to the privacy policy, terms and conditions</string>
    <string name="signUp">Sign Up</string>
    <string name="create_your_free_account_now">Fill in the Information for Register</string>
    <string name="enter_your_registered_login_email_address_to_recieve_a_secure_link_to_set_a_new_password">Enter your registered login email address to recieve a secure link to set a new password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="sendlink">Send link to reset</string>
    <string name="dontreset">Don\'t want to reset password?</string>
    <string name="gotoLogin">Go to log in</string>
    <string name="email_address">Email Address</string>
    <string name="serach">Search</string>
    <string name="livechat">Chat</string>
    <string name="about">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="tellUs">Tell us about you</string>
    <string name="lookingfor">What are you looking for?</string>
    <string name="save">Save</string>
    <string name="Kg">weight in KG</string>
    <string name="interest">Interests:</string>
    <string name="drinking">Drinking:</string>
    <string name="smoking">Smoking:</string>
    <string name="hair">Hair:</string>
    <string name="eyes">Eyes:</string>
    <string name="looking_for">Looking for:</string>
    <string name="body_type">Body Type:</string>
    <string name="height">Height:</string>
    <string name="fill_the_information">Fill The Information</string>
    <string name="weight">Weight:</string>
    <string name="activate">Activate VIP Membership</string>
    <string name="viptext">Find more friends from VIP FriendFin</string>
    <string name="viptext2">Remove Ads!</string>
    <string name="vipdesc2">Vip members got totally ad-free experience!</string>
    <string name="viptext3">Top of the inbox!</string>
    <string name="vipdesc3">your message will be seen in top message of the inbox!</string>
    <string name="viptext4">Connect to unlimited people!</string>
    <string name="vipdesc4">you can connect to unlimited number of people. There is no limit!</string>
    <string name="viptext5">Search members from other countries!</string>
    <string name="vipdesc5">you can search members not only from your country but also from other countries. There is no limit.</string>
    <string name="privacypolicy"><![CDATA[This Privacy Policy governs the manner in which FriendFin.com and the mobile apps collects, uses, maintains and discloses information collected from users (each, a \"User\") of the FriendFin.com website (\"Site\") and apps at http://play.google.com/store/apps/developer?id=Rishi%20Kapoor&hl=en. This privacy policy applies to the Site and all products and services offered by FriendFin.com and apps at http://play.google.com/store/apps/developer?id=Rishi%20Kapoor&hl=en.    PERSONAL IDENTIFICATION INFORMATION  We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, register on the site, place an order, subscribe to the newsletter, respond to a survey, fill out a form, and in connection with other activities, services, features or resources we make available on our Site. Users may be asked for, as appropriate, name, email address, mailing address. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site related activities.    NON-PERSONAL IDENTIFICATION INFORMATION  We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the browser name, the type of computer and technical information about Users means of connection to our Site, such as the operating system and the Internet service providers utilized and other similar information.    WEB BROWSER COOKIES  Our Site may use \"cookies\" to enhance User experience. User\'s web browser places cookies on their hard drive for record-keeping purposes and sometimes to track information about them. User may choose to set their web browser to refuse cookies, or to alert you when cookies are being sent. If they do so, note that some parts of the Site may not function properly.    HOW WE USE COLLECTED INFORMATION  FriendFin.com and apps at http://play.google.com/store/apps/developer?id=Rishi%20Kapoor&hl=en may collect and use Users personal information for the following purposes:  \t- To improve customer service  \tInformation you provide helps us respond to your customer service requests and support needs more efficiently.  \t- To personalize user experience  \tWe may use information in the aggregate to understand how our Users as a group use the services and resources provided on our Site.  \t- To improve our Site  \tWe may use feedback you provide to improve our products and services.  \t- To process payments  \tWe may use the information Users provide about themselves when placing an order only to provide service to that order. We do not share this information with outside parties except to the extent necessary to provide the service.  \t- To run a promotion, contest, survey or other Site feature  \tTo send Users information they agreed to receive about topics we think will be of interest to them.  \t- To send periodic emails  \tWe may use the email address to send User information and updates pertaining to their order. It may also be used to respond to their inquiries, questions, usage tips, website news and/or other requests, promotions. If at any time the User would like to unsubscribe from receiving future emails, they must delete their account in settings page under profile.    HOW WE PROTECT YOUR INFORMATION  We adopt appropriate data collection, storage and processing practices and security measures to protect against unauthorized access, alteration, disclosure or destruction of your personal information, username, password, transaction information and data stored on our Site.    SHARING YOUR PERSONAL INFORMATION  We do not sell, trade, or rent Users personal identification information to others. We may share generic aggregated demographic information not linked to any personal identification information regarding visitors and users with our business partners, trusted affiliates and advertisers for the purposes outlined above. We may use third party service providers to help us operate our business and the Site or administer activities on our behalf, such as sending out newsletters or surveys. We may share your information with these third parties for those limited purposes provided that you have given us your permission.In addition, user\'s profile may be displayed on other site for maximum exposure.    THIRD PARTY WEBSITES  Users may find advertising or other content on our Site that link to the sites and services of our partners, suppliers, advertisers, sponsors, licensors and other third parties. We do not control the content or links that appear on these sites and are not responsible for the practices employed by websites linked to or from our Site. In addition, these sites or services, including their content and links, may be constantly changing. These sites and services may have their own privacy policies and customer service policies. Browsing and interaction on any other website, including websites which have a link to our Site, is subject to that website\'s own terms and policies.    ADVERTISING  Ads appearing on our site may be delivered to Users by advertising partners, who may set cookies. These cookies allow the ad server to recognize your computer each time they send you an online advertisement to compile non personal identification information about you or others who use your computer. This information allows ad networks to, among other things, deliver targeted advertisements that they believe will be of most interest to you. This privacy policy does not cover the use of cookies by any advertisers.    GOOGLE ADSENSE  Some of the ads may be served by Google. Google\'s use of the DART cookie enables it to serve ads to Users based on their visit to our Site and other sites on the Internet. DART uses \"non personally identifiable information\" and does NOT track personal information about you, such as your name, email address, physical address, etc. You may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy at http://www.google.com/privacy_ads.html    COMPLIANCE WITH CHILDREN\'S ONLINE PRIVACY PROTECTION ACT  Protecting the privacy of the very young is especially important. For that reason, we never collect or maintain information at our Site from those we actually know are under 18, and no part of our website is structured to attract anyone under 18.    CHANGES TO THIS PRIVACY POLICY  FriendFin.com has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.    YOUR ACCEPTANCE OF THESE TERMS  By using this Site and apps at http://play.google.com/store/apps/developer?id=Rishi%20Kapoor&hl=en, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes.    CONTACTING US  If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:  FriendFin.com  www.FriendFin.com  contactus@FriendFin.com]]></string>
    <string name="loading">Loading</string>
    <string name="search_hints">Search user</string>
    <string name="BannerAdsUnitId">ca-app-pub-3432824199077306/3324531097</string>
</resources>