<?xml version="1.0" encoding="utf-8"?>
<layout>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.privacypolicy.PrivacyPolicyActivity">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/topActionBar"
        android:background="@color/signInColor"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

    </LinearLayout>

    <ImageView
        android:padding="@dimen/_4sdp"
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/topActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topActionBar"
        app:tint="@color/black" />



    <TextView

        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/_14ssp"
        android:text="Privacy Policy"
        app:layout_constraintStart_toEndOf="@+id/imageBack"
        app:layout_constraintTop_toTopOf="@+id/imageBack"
        app:layout_constraintBottom_toBottomOf="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/topActionBar"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView

            android:gravity="center_horizontal"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/privacypolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
    </ScrollView>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/BannerAdsUnitId"
        ads:layout_constraintBottom_toBottomOf="parent">

    </com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>