<?xml version="1.0" encoding="utf-8"?>
<layout>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.individualsearch.IndividualSearchResult">

    <LinearLayout
        android:id="@+id/topActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/signInColor"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/topActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topActionBar"
        app:tint="@color/black" />


    <LinearLayout
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topActionBar"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSearch"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_50sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


    <!--        </androidx.core.widget.NestedScrollView>-->



    <LinearLayout
        android:id="@+id/layout_loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adView">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Small.FadingCircle"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_gravity="center"
            app:SpinKit_Color="#020202" />

        <TextView
            android:id="@+id/txt_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:visibility="gone"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_centerHorizontal="true"

        ads:adSize="BANNER"
        ads:adUnitId="@string/BannerAdsUnitId">

    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>