<?xml version="1.0" encoding="utf-8"?>
<layout>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chatsearch.ChatSearchActivity">
    <LinearLayout
    android:id="@+id/topActionBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/signInColor"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent">

</LinearLayout>

    <ImageView
        android:padding="@dimen/_4sdp"
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/topActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topActionBar"
        app:tint="@color/black" />

    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/lin"
        app:layout_constraintTop_toBottomOf="@+id/topActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:orientation="vertical"
        android:background="@drawable/serach_bg"
        android:padding="2dp">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:iconifiedByDefault="false"
            android:theme="@style/search_view"
            app:iconifiedByDefault="false"
            android:layoutDirection="rtl"
            app:closeIcon="@drawable/ic_close"
            app:queryHint="@string/search_hints"
            app:queryBackground="@android:color/transparent"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSuggestions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_search_suggestion"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/chat_user_list"
        />


    <com.google.android.gms.ads.AdView
        android:visibility="gone"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_centerHorizontal="true"

        ads:adSize="BANNER"
        ads:adUnitId="@string/BannerAdsUnitId">

    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>